# ese-forensic

./: .gitignore  404.html  Cargo.toml  README.md  clippy.toml  deny.toml  index.html  mkdocs.yml  release-plz.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml
PRD/: index.html
crates/ese-carver/: Cargo.toml  README.md
crates/ese-carver/src/: lib.rs
crates/ese-carver/tests/: fixtures.rs  fragment_tests.rs
crates/ese-core/: Cargo.toml  README.md
crates/ese-core/src/: catalog.rs  database.rs  lib.rs  page.rs  record.rs
crates/ese-core/tests/: btree_catalog_tests.rs  btree_tests.rs  catalog_tests.rs  checksum_tests.rs  cursor_tests.rs  fixtures.rs  large_page_tests.rs  mmap_tests.rs  per_table_columns_tests.rs  real_webcache_tests.rs  record_tests.rs  robustness_tests.rs  table_columns_tests.rs  tagged_record_tests.rs
crates/ese-integrity/: Cargo.toml  README.md
crates/ese-integrity/tests/: canonical_finding_tests.rs  fixtures.rs  integrity_tests.rs  robustness_tests.rs
crates/ese-test-fixtures/: Cargo.toml
crates/ese-test-fixtures/src/: lib.rs
crates/ese-test-fixtures/tests/: builder_tests.rs
decisions/0001-extract-standalone-ese-reader/: index.html
decisions/0002-multi-crate-split-core-integrity-carver/: index.html
decisions/0003-crate-naming-and-import-path/: index.html
decisions/0004-unsafe-deny-plus-bounded-mmap-allow/: index.html
decisions/0005-panic-free-bounded-reads-and-per-structure-fuzzing/: index.html
decisions/0006-low-library-msrv-floor/: index.html
decisions/0007-findings-via-forensicnomicon-report/: index.html
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-extract-standalone-ese-reader.md  0002-multi-crate-split-core-integrity-carver.md  0003-crate-naming-and-import-path.md  0004-unsafe-deny-plus-bounded-mmap-allow.md  0005-panic-free-bounded-reads-and-per-structure-fuzzing.md  0006-low-library-msrv-floor.md  0007-findings-via-forensicnomicon-report.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_carver.rs  fuzz_catalog.rs  fuzz_ese_open.rs  fuzz_integrity.rs  fuzz_page.rs  fuzz_record.rs
privacy/: index.html
search/: search_index.json
supply-chain/: config.toml
terms/: index.html
validation/: index.html
