[package]
name = "ese-carver"
version = "0.1.2"
description = "ESE page carving and fragmented record reconstruction"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ese-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
ese-test-fixtures.workspace = true
ese-core.workspace = true
tempfile.workspace = true

[lints]
workspace = true
